# Algorithms

./: .gitignore  CONTRIBUTING.md  README.md
Chess-E/: .dockerignore  .env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  build.bat  docker-compose.yml
Chess-E/data/: opening_book.txt
Chess-E/docs/: ARCHITECTURE.md  USER_GUIDE.md
Chess-E/src/: alphabeta.cpp  alphabeta.h  aspiration_windows.cpp  aspiration_windows.h  board.cpp  board.h  endgame_tablebase.cpp  endgame_tablebase.h  evaluation.cpp  evaluation.h  iterative_deepening.cpp  iterative_deepening.h  late_move_reduction.cpp  late_move_reduction.h  main.cpp  move.h  move_ordering.cpp  move_ordering.h  movegen.cpp  movegen.h  null_move_pruning.cpp  null_move_pruning.h  opening_book.cpp  opening_book.h  post_analysis.cpp  post_analysis.h  principal_variation_search.cpp  principal_variation_search.h  quiescence_search.cpp  quiescence_search.h  search.cpp  search.h  search_extensions.cpp  search_extensions.h  test_engine.cpp  thread_pool.cpp  thread_pool.h  time_management.cpp  time_management.h  transposition_table.cpp  (+3 more)
Chess-E/test/: test_evaluation.cpp  test_search.cpp
ECC Implementation/: README.md  __init__.py  setup.py
ECC Implementation/crypto/: __init__.py  ecdh.py  ecdsa.py  key_generation.py
ECC Implementation/ecc_implementation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ECC Implementation/elliptic_curve/: __init__.py  edwards_curve.py  elliptic_curve.py  montgomery_curve.py  point.py  standard_curves.py  weierstrass_curve.py
ECC Implementation/examples/: basic_example.py  ecdh_example.py  ecdsa_example.py
ECC Implementation/finite_field/: __init__.py  binary_field.py  finite_field_element.py  polynomial_field.py  prime_field.py
ECC Implementation/src/ecc_implementation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ECC Implementation/tests/: test_crypto.py  test_elliptic_curve.py  test_finite_field.py
ECC Implementation/utils/: __init__.py  number_theory.py  random_utils.py
(+10 files in other folders)
